<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/main_button_registerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_button_registerName" />

    <Button
        android:id="@+id/main_button_unregisterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_button_unregister_name" />

    <Button
        android:id="@+id/main_button_associateId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_button_associate_Id" />

    <Button
        android:id="@+id/main_button_disassociateId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_button_disassociateId" />

    <Button
        android:id="@+id/main_button_lookupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_button_lookupName" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_textview_name_info"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/main_editText_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_textview_registrationId_info"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/main_edittext_registrationId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <ProgressBar 
        android:id="@+id/main_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</LinearLayout>